--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,9 @@
-<h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<h1>Kiran Kumar Choppakatla</h1>
+<p> holds a Bachelor's degree in Commerce (BCom), along with a Post Graduate Program in  Cloud Computing and a Diploma in Hardware Engineering from the Indian Institute of Hardware Technologies. With nearly 20 years of experience in the NBFC industry, Kiran has made significant contributions to various organizations.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+  <P>At Heritage Finlease Private Limited, Kiran has played a crucial role in managing the FinPage Application and was instrumental in migrating data and applications to go live. Previously, he worked for two years at Bharat Financial Inclusion Limited, a 100% subsidiary of IndusInd Bank, where he managed and Developed the NPA Data Management Project.</p>
+  
+  <p>During his tenure at Trident Microfin Private Limited, Kiran was pivotal in designing and developing the in-house software application known as the Micro Enterprise Operating Support System (MOSS). Starting his career as a System Executive in August 2007, Kiran has consistently demonstrated outstanding performance and commitment, leading to his progression up the corporate ladder.</p>
+  
+  <p>Kiran's exceptional understanding of field operations, combined with his proficiency in software application skills, enables him to achieve the desired outcomes for real-time monitoring of portfolios.</p>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
