--- a/index.html
+++ b/index.html
@@ -1,176 +1,38 @@
+<!-- TODO 1: Create the HTML Boilerplate -->
+
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  
-    <title>My Resume</title>
+    <title>Kiran Profile</title>
 </head>
 <body>
-    <h1>Kiran Kumar Choppakatla</h1>
-    <img src="./Assets/Images/kiran_pic.jpeg" alt="Kiran Kumar Choppakatla" />
-    <h1>Profile Summary</h1>
-    <p>Visionary and Solution Driven having Deep industry experience of 14+ years in
-        Non-banking Financial Systems and like asset Management, LOS, LMS and
-        Collections Systems. Major Experiences in implementation IT Projects. Business
-        Analyses, Database and Data Analytic Development, Testing, Data Migrations,
-        Software Upgrades, Production Support, Go-Live Assistance, Implementation
-        Support and PMO activates.</p>
-    <h1>Professional Synopsis</h1>
-    <ul>
-        <li>Result-oriented and proven track record of Development & Implementation of Digital&
-            Web based applications and 12+ years of experience in Project Management, Business
-            Analysis, Requirement Analysis, Data Analysis and MIS reporting, Integration of different
-            applications of Non-Banking Financial Industry and successfully managing outcomes with
-            good empiricism from initiation to implementation of project.</li>
-        <li>Strong Conceptual and Functional Knowledge in Lending Product Micro Finance Loans,
-            Home Loans, Vehicle Loan, Crop Loans, Personal Loan, MSME Loans , Micro Enterprise
-            Loans , School Loans , Loan to educational Institution.</li>
-        <li>Proficient in creating Business Requirement Documents (BRD), Functional Specification
-            Documents (FSD) Use Case Diagrams (USD), Activity Diagram, Sequence Diagrams and
-            having good experience in gathering business requirements, evaluating data sources,
-            translating requirements into specifications, application and database design, technical
-            and business writing.</li>
-        <li>Managing the complete lifecycle of the project right from requirements gathering till
-            production movement.</li>
-        <li>Having Good experience in Database and Data Analytic development and Application
-            Merging and data Migration, Integration of Multiple Applications</li>    
-    </ul>
-
-    <h1>Education</h1>
-    <ul>
-        <li>PGP-CC (Post Graduate Program in Cloud Computing AWS & Azure) from GREATE LAKES July-22 to June-23</li>
-        <li>Bachelor of Commerce from Osmania University, Hyderabad, Telangana distance Mode 2007-2012 </li>
-        <li>Diploma in hardware engineering From Indian institute of hardware technologies.2001</li>        
-        <li>Intermediate from St.Patricks junior College, Hyderabad, Telangana. 1994-1996 </li>
-        <li>SSC from Saint Elizabeth Ann Seton High School, Kisannagar,Nizamabad, Telangana.1994</li>
-    </ul>   
-    <h1>Work experience</h1>
-    <h2> Bharat Financial Inclusion Limited</h2>
-    <h3>June 2021 to june 2023</h3>
-    <h4>Development Manager</h4>
-    <ul>
-        <li>Management and Development of D2K NPA Data Submission 
-            (Automation of NPA Data Submission</li>
-        <li>Portfolio Health Checkup (Validating & Checking Data quality.) </li>
-        <li> Customer Risk Rating  (Rating the customer and Reverse feed consumption form clari5.)</li>
-    </ul>
-    <h2>Finnovo Tech Functional  Pvt. Ltd.</h2> 
-     <h3>June2020 to May2021 </h3>
-    <h4>Technical Project Manager</h4>
-    <ul>
-        <li>Designed and involved in Development of Web and android based application 
-            For Task and Vendor Management for Pharm Company.</li>
-        <li> Key Role in Database Designing and core Procedures writing.</li>
-    </ul> 
-    <h2>Trident Microfin Private </h2>
-    <h3>Apr2012 - Jun2020 </h3>
-    <h4>Technical Project Manager </h4>
-    <ul>
-       <li> Managed Both IT-Support and Development Teams.</li>
-        <li>MEOSS Source Code Management: Change request Analysis,</li>
-        <li>Impact Analysis in the Code and guiding UI Team to Make Changes.</li>
-        <li>Applying Changes in the Database.</li>
-        <li>Source Code Management using VSS, Version Control</li>
-        <li>Maintaining Deployment and Live Code Separately. </li>
-        <li>Maintaining Source Code Backup.</li>
-        <li>Managing the Deployment Application.</li>
-        <li>Keeping Test and Production Environmentseparate.</li>
-        <li>Production Server Management. </li>
-        <li>Resolving Production Issues.</li>
-        <li>Developed the android App </li>
-        <li>Development:
-        DB Designing, Writing complex procedure, Triggers, functions
-        and joins and loop, views, Index's in DB's, coding for reporting, Data
-        Management.</li>
-        <li>Implementation and  Application Support, Production Support, Bugs resolution,
-        Debug the issue in .net application and resolving the issue if it is
-        DB side. </li>
-        <li>Drive Internal and External Audit and Providing Support
-        in smooth and Timely completion of Statutory Audit</li>
-    </ul>
-    <h3> Oct2010 - Mar2012</h3>
-    <h4>Business Analysis </h4>
-    <h5>Responsibilities:</h5>
-    <ul>
-        <li>Requirement Elicitation, Feasibility Study, Requirement Finalization,
-            BRD and FRD Verification. 
-        </li>
-        <li>Data flow diagram preparation, Wireframe
-            preparation, Low fidelity design, mockups prototype preparation.
-        </li>
-        <li>Reports Developments:
-            Provide the Formats for all the Regular Reports and Validated the
-            Authenticity of the reports, written Procedure for Key Reports.
-        </li>
-        <li>Data Migration:
-            Wrote Procedure and migrate the Data from De-centralizedDB (104
-            databases) with half Million records and Merged the Data into Single
-            Centralized Database with Accounts Integration (Got Statutory
-            Auditor Confirmation).
-        </li>
-        <li>Testing: Application Testing, DB Testing, Integration testing, Performance
-            Testing Manually.
-        </li>
-    </ul>
-    <h3>Aug2007 -  Sep2010 </h3>
-    <h4>Application Management</h4>
-    <h5>Responsibilities: </h5>
-    <ul>   
-        <li>System Administrator/Server & Network Monitoring, Patch
-        Update/Support for Printer and scanner</li>
-        <ol>Managed 2 Vendor Applications During the above mentioned period
-            <li>Vendor Name: Jayam Solutions Private Limited (Desktop Version Mar2009-sep 2010).</li>
-            <li>Vendor Name: Craft Silicon (MFO-Lite)(Aug2007-10) </li>
-            <li>Trained and certified by Craft silicon team to manage the apllication</li>
-        </ol>
-       <li> Reporting the Bugs to the Vendor,Getting Issues Resolved on
-            time, New Requirements and Modifications in Available
-            functionality
-        </li>
-        <li>Understanding the Database and providing solution repeating
-            Issues (DB related).
-        </li>
-    </ul> 
-    <h2>Koti Womens College Afflicated to Osmania University</h2>
-    <h3>Oct2006 - ]ul2007 </h3>
-    <h4>System Administration </h4>
-    <ul> 
-        <li>System Administrator/Server & Network Monitoring, Patch
-            Update/Support for Printer and scanner
-        </li>
-        <li>Marks punching into software Data entry</li>
-       <li> Memo Preparation and Question Paper Cyclostyle Printing. </li>
-    </ul> 
-<h1>Technical Skills</h1>
-<ol>
-    <li>MS Windows & Linux</li>
-    <li>Office Tools: MS Office</li>
-    <li>SQL Server, MySQL</li>
-    <li>SSRS Reporting and SSIS Tool</li>
-    <li>Workflow Design: Bizagi, draw.io</li>
-    <li>API Testing: Post Man</li>
-    <li>Windows Administration/Patch Management/Active Directory/Antivirus Updates/
-        Remote Support/Database Management/Service and support</li>
-</ol>
-<h1>Soft Skills</h1>
-<ol>    
-    <li>Project Management</li>
-    <li>Requirement Gathering</li>
-    <li> Business Analysis</li>
-    <li>Data base coding</li>
-    <li> Vendor Management</li>
-    <li> Stakeholder Management</li>
-    <li> Application Testing</li>
-    <li> Data Analytics</li>
-    <li>Application Support</li>
-    <li>Specialist in data migration projects</li>
-    <li>Process Enhancement</li>
-</ol>
-<h2><a href="./Public/hobbies.html" >Hobbies</a></h2>
-<h2><a href="./Public/contact.html" >Contact details</a></h2>
-
+    <h1>I am Choppakatla Kiran Kumar</h1>
+    <h2>This is my first Site as Web developer</h2>
+    <h3><a href="./public/birthday-invite.html" > My Birthday-Invite</a></h3>
+    <hr/>
+    <img height="200px" src="./assets/images/birthday-invite.png" alt="birthday-invite" />
+    <hr/>
+    <h3><a href="./public/movie-ranking.html">Movie-ranking</a></h3>
+    <hr/>
+    <img height="200px" src="./assets/images/movie-ranking.png" alt="Movie-ranking"/>
+    <hr/>
+    <a href="./public/about.html">About Me</a>
+    <br/>
+    <a href="./public/contact.html">Contact Me</a>
+    
 </body>
-<footer>
-    <p>© 2024 kiran Kumar Choppakatla</p>
-</footer>
 </html>
